--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1.27.0", features = ["full"] }
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = { version = "1.0.95" }
 
-axum_static = "1.2.1"
+tower-http = { version = "0.4.0", features = ["fs"] }
 chrono = "0.4.1"
 colored = "2.0.0"
 axum = { version = "0.6.12", features = ["ws"] }
